# andalus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  benchmark_data.h5  justfile  pyproject.toml  warnings.txt  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
CHANGELOG/: v0.0.1.md  v0.1.1.md  v0.1.2.md
andalus/: __init__.py  application.py  assimilation.py  benchmark.py  covariance.py  filters.py  sensitivity.py  spectrum.py  utils.py
data/: README.md  b10.errorr33  config.yaml  covariances_test.h5  hmf001.ser_det0.m  hmf001.ser_res.m  hmf002-001.ser_det0.m  hmf002-001.ser_res.m  hmf002-001.ser_sens0.m  hmf002-002.ser_det0.m  hmf002-002.ser_res.m  hmf002-002.ser_sens0.m  u235.errorr31  u235.errorr33  u235.errorr34  u235.errorr35
docs/: api.md  index.md  installation.md  usage.md
docs/source/: conf.py  examples.rst  index.rst  installation.md  quickstart.md  theory.md  usage.md  user_guide.md  yaml_config.md
docs/source/_collections/examples/: config.yaml  least_squares_adjustment.ipynb  plot_serpent_sensitivity.ipynb
docs/source/_static/: custom.css
docs/source/api/: andalus.rst  modules.rst
examples/: config.yaml  covariance_from_errorr.ipynb  flux_spectrum_and_e_index.ipynb  least_squares_adjustment.ipynb  plot_serpent_sensitivity.ipynb
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/api/: index.html
site/installation/: index.html
site/usage/: index.html
src/andalus/: __init__.py  application.py  assimilation.py  benchmark.py  cli.py  constants.py  covariance.py  sensitivity.py  utils.py
tests/: hmf001.ser_sens0.m  test_andalus.py  test_application.py  test_assimilation.py  test_benchmark.py  test_cli.py  test_constants.py  test_covariance.py  test_filters.py  test_sensitivity.py  test_spectrum.py  test_utils.py
