[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andalus"
version = "0.1.1"
description = "Applied Nuclear Data Assimilation using Least sqUareS (ANDALUS) is an Open Source data assimilation tool for improving predictions of nuclear applications."
readme = "README.md"
authors = [
  {name = "Daan Houben", email = "houbendaan@gmail.com"}
]
maintainers = [
  {name = "Daan Houben", email = "houbendaan@gmail.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "pandas",
  "numpy<2.0.0",
  "h5py",
  "serpentTools",
  "matplotlib",
  "sandy",
  "setuptools", # Because serpentTools does not have distutils
]
requires-python = ">= 3.08, <3.13" # serpentTools is not compatible with >3.13

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/daan1392/andalus/issues"
changelog = "https://github.com/daan1392/andalus/blob/main/HISTORY.md"
documentation = "https://daan1392.github.io/andalus/"
homepage = "https://github.com/daan1392/andalus"

[project.scripts]
andalus = "andalus.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
